package com.nashss.se.redpoint.dataaccess.models;

import com.fasterxml.jackson.annotation.JsonProperty;

public class Metadata {
    @JsonProperty("leftRightIndex")
    private String leftRightIndex;

    public String getLeftRightIndex() {
        return leftRightIndex;
    }
}
