@startuml
'https://plantuml.com/sequence-diagram
title Pojo Structure
class Area {
- areaName : String
- uuid : String
- climbs : List<Climb>
- children : List<Area>
- content : Content
- coordinates : Coordinates
}

class Climb {
- name : String
- uuid : String
- grade : String
- content : Content
- metadata : Metadata
}
class Content {
- location : String
- protection: String
- description: String}
class Metadata {
- leftRightIndex : String;
}
class Coordinates {
- latitude : String
- longitude : String
}
class Comment {
- @DynamoDBHashKey commentId : String
- timestamp : ZonedDateTime
- @DynamoDBIndexHashKey climbId : String
- text : String
- userId : String
}
class CommentModel {
- commentId : String
- timestamp : ZonedDateTime
- climbId : String
- text : String
- userId : String
}
class LogbookEntry {
- @DynamoDBHashKey userId : String
- @DynamoDBRangeKey climbId : String
- date : LocalDate
- notes : String

}
class LogbookEntryModel {
- userId : String
- climbId : String
- date : String
- notes : String
}

Area --* Climb
Area --* Content
Area --* Coordinates
Climb --* Content
Climb --* Metadata


newpage

title Activity Structure

class AreaDao {
- client : HttpClient
+ getArea(uuid : String) Area
+ getAllAreas(query : String) List<Area>
}
class ClimbDao {
- client : HttpClient
- metricsPublisher : MetricsPublisher
+ getClimb(uuid: String) : Climb
}
class LogbookEntryDao {
- mapper : DynamoDbMapper
- metricsPublisher :
+ getLogbookEntry(userId : String) : User
+ saveLogbookEntry()
+ deleteLogbookEntry()
}
class CommentDao {
- mapper : DynamoDbMapper
- metricsPublisher :
+ getComment(commentId : String) : Comment
+ getAllCommentsForClimb(cragId : String) : List<Comment>
+ saveComment(comment : Comment) : Comment
+ deleteComment(commentId : String) : Comment
}
class GetAreaActivity {
- log : Logger
- areaDao : AreaDao
- converter : AreaModelConverter
+ GetAllAreasActivity(areaDao : AreaDao, converter : AreaModelConverter)
+ handleRequest(request : GetAreaRequest) GetAreaResponse
}
class GetAllAreasActivity{
- log : Logger
- areaDao : AreaDao
- converter : AreaModelConverter
+ GetAllAreasActivity(areaDao : AreaDao, converter : AreaModelConverter)
+ handleRequest() GetAllAreasResponse
}
class GetClimbActivity{
- log : Logger
- climbDao : ClimbDao
- converter : ClimbModelConverter
+ GetClimbActivity(climbDao : ClimbDao, converter : ClimbModelConverter)
+ handleRequest(request : GetClimbRequest) GetClimbResponse
}

class GetAllCommentsForClimbActivity{
- log : Logger
- commentDao : CommentDao
- converter : CommentModelConverter
+ GetAllCommentsForClimbActivity(commentDao : CommentDao, converter : CommentModelConverter)
+ handleRequest(request : GetAllCommentsForClimbRequest) GetAllCommentsForClimbResponse
}

class UpdateLogbookEntryActivity{
- log : Logger
- userDao : UserDao
- climbDao : ClimbDao
- converter : UserModelConverter
+ UpdateToDoListActivity(userDao : UserDao, climbDao : ClimbDao, converter : UserModelConverter)
+ handleRequest(request : UpdateToDoListRequest) UpdateToDoListResponse
}


class CreateCommentActivity{
- commentDao : CommentDao
- climbDao : climbDao
- converter : CommentModelConverter
+ CreateCommentActivity(commentDao : CommentDao, climbDao : ClimbDao, converter: CommentModelConverter)
+ handleRequest(request : CreateCommentRequest) CreateCommentResponse
}


class UpdateCommentActivity{
- commentDao : CommentDao
- climbDao : climbDao
- converter : CommentModelConverter
+ UpdateCommentActivity(commentDao : CommentDao, climbDao : ClimbDao, converter: CommentModelConverter)
+ handleRequest(request : UpdateCommentRequest) UpdateCommentResponse
}
class DeleteCommentActivity{
- log : Logger
- commentDao : CommentDao
- climbDao : ClimbDao
+ DeleteCommentActivity(commentDao : CommentDao, climbDao : ClimbDao)
+ handleRequest(request : CreateCommentRequest) CreateCommentResponse
}

class GetUserActivity{
- log : Logger
- userDao : UserDao
- converter : UserModelConverter
+GetUserActivity(userDao: UserDao, converter : UserModelConverter)
+ handleRequest(request : GetUserRequest) GetUserResponse
}



newpage

title Exceptions
exception RuntimeException
exception AreaNotFoundException extends RuntimeException{
}
exception ClimbNotFoundException extends RuntimeException
exception CommentNotFoundException extends RuntimeException
exception LogbookEntryNotFoundException extends RuntimeException

@enduml